# memory-system

./: .gitignore  Cargo.toml  DESIGN.md  README.md  SKILL.md  TEST_PLAN.md  start.sh  test_integration.py
memory-agent/: DESIGN.md  SKILL.md
memory-agent/memory/: __init__.py  core.py  decision.py  hooks.py  schema.sql
memory-agent/tests/: test_memory.py
migrate/: Cargo.toml
migrate/src/: main.rs
scripts/: build.sh  memory-tool.py  start.sh  stop.sh
src/: common.rs  config.rs  errors.rs  lib.rs  main.rs  migrate.rs  openclaw.rs  wal.rs
src/common/: encoding.rs  mod.rs
src/l0/: mod.rs
src/l1/: mod.rs
src/l2/: mod.rs
src/l3/: mod.rs
