[package]
name = "memory-system"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt", "sync", "fs", "io-util", "time", "net", "rt-multi-thread", "macros"] }

# L0: Sharded lock-free concurrent HashMap
dashmap = "5"
parking_lot = "0.12"
crossbeam-queue = "0.3"

# L1: Embedded KV with mmap (pure Rust, no C deps)
sled = "0.34"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# L2: Vector search
# usearch = "4"  #暂跳过，发行版可能没有预编译

# Embedding (lightweight)
# tantivy = "0.22"  #全文检索，可选

# HTTP client for Gemini API
ureq = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Config
toml = "0.8"
serde_yaml = "0.9"

# Misc
thiserror = "1"
anyhow = "1"
once_cell = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
