[package]
name = "memory-system-v2"
version = "0.2.0"
edition = "2021"
description = "Four-layer memory system for OpenClaw agents"
authors = ["OpenClaw Team"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Concurrency primitives
dashmap = "5"
parking_lot = "0.12"
crossbeam-channel = "0.5"

# SQLite
rusqlite = { version = "0.31", features = ["bundled"] }

# HTTP server (axum + rustls for pure-Rust, no OpenSSL needed)
axum = "0.7"
axum-server = { version = "0.7", default-features = false, features = ["tls-rustls"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
rustls = "0.23"



# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Token bucket rate limiting
ratelimit = "0.3"

# URL parsing
url = "2"

# HTTP client (rustls TLS, no OpenSSL required)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Metrics
metrics = "0.21"
metrics-exporter-prometheus = { version = "0.13", default-features = false }

[dev-dependencies]
tempfile = "3"
once_cell = "1"
